--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "build:chart": "webpack --profile --json > stats.json",
-    "build:pro": "webpack --env.NODE_ENV=local --env.production --progress"
+    "build:pro": "webpack --env.NODE_ENV=local --env.production --progress",
+    "build:test": "webpack --env.NODE_ENV=local --env.development --progress"
 
   },
   "keywords": [],
