--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "speed-measure-webpack-plugin": "^1.5.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "babel-loader": "8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^5.2.0",
     "eslint": "^6.0.0",
@@ -20,7 +23,7 @@
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.0.0",
     "less-loader": "6.0.0",
-    "mini-css-extract-plugin": "^1.2.0",
+    "mini-css-extract-plugin": "^1.1.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "postcss-loader": "^4.0.0",
     "postcss-preset-env": "^7.0.0",
