--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.16.11",
     "babel-loader": "8.0.6",
     "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^3.21.1",
     "css-loader": "^5.2.0",
     "eslint": "^6.0.0",
     "eslint-config-airbnb-base": "^13.0.0",
